# CarID

./: .bandit  .env.example  .flake8  .gitignore  .pylintrc  .syncignore  ADDON_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
scripts/: bump_version.py
service/: .flake8  addon_config.py  app.py  config.py  gcs_storage.py  image_utils.py  index_manager.py  logging.yaml  ml_models.py  models.py  requirements.txt  storage.py
tests/: __init__.py  test_models.py
