[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carid-service"
version = "0.2.0"
description = "CarID (OpenCLIP + FAISS + Negatives + Prototype Mode)"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.25.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.11.0",
    "open-clip-torch>=2.20.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

# Note: For shell scripts like uvicorn and rsync, see Makefile

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
    "safety>=2.0.0",
    "types-requests>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["service*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
